bug: fixes page jank when loading on mobile devices

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -34,15 +34,15 @@ body {
   color: var(--font);
   font-family: "Work Sans", sans-serif;
   line-height: 1.5;
-  width: 100vw;
 }
 
 body {
-  padding: 50px 35px;
   background-color: var(--surface);
 
   #__next {
-    height: 100%;
+    padding: 50px 35px;
+    max-width: 100vw;
+    overflow-x: hidden;
   }
 }
 
